feat(app info): dynamic app detail info